[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawkapi-storage"
version = "0.2.0"
description = "File storage for HawkAPI — local, S3, GCS, Azure backends, pre-signed URLs, streaming uploads"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "HawkAPI Contributors", email = "hawkapi@users.noreply.github.com" },
]
keywords = ["hawkapi", "storage", "s3", "gcs", "azure", "upload", "files"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
dependencies = ["hawkapi>=0.1.7"]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.14"]
azure = ["azure-storage-blob>=12.19"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "boto3>=1.34",
    "ruff>=0.8",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://pypi.org/project/hawkapi-storage/"
Repository = "https://github.com/Hawk-API/hawkapi-storage"
Issues = "https://github.com/Hawk-API/hawkapi-storage/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hawkapi_storage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101", "S110", "B008", "SIM105", "SIM108", "SIM113"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
reportUntypedFunctionDecorator = false
reportGeneralTypeIssues = false
